--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ pest = "2"
 pest_derive = "2"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
 either = "1.6"
+lazy_static = "1.4.0"
+clap = "3.0.0-beta.2"
