--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ pest_derive = "2"
 # inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
 either = "1.6"
-lazy_static = "1.4.0"
+# lazy_static = "1.4.0"
+once_cell = "1.8.0"
 clap = "3.0.0-beta.2"
