--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", feat
 either = "1.6"
 once_cell = "1.8.0"
 clap = "3.0.0-beta.5"
-console = "0.14.1"
+console = "0.15.0"
 ordered-float = "2.8"
 indicatif = "0.16.2"
 snailquote = "0.3"
+ptree = "0.4"
