--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,8 @@ pest_derive = "2"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
 either = "1.6"
 once_cell = "1.8.0"
-clap = "3.0.0-beta.5"
+clap = { version = "3.0.0-beta.7", features = ["derive"] }
 console = "0.15.0"
 ordered-float = "2.8"
-indicatif = "0.16.2"
 snailquote = "0.3"
 ptree = "0.4"
