--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ pest = "2"
 pest_derive = "2"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
 either = "1.6"
-once_cell = "1.8.0"
-clap = { version = "3.0.0-beta.7", features = ["derive"] }
+once_cell = "1.9.0"
+clap = { version = "3.0.0-rc.8", features = ["derive"] }
 console = "0.15.0"
 ordered-float = "2.8"
 snailquote = "0.3"
