--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ either = "1.6"
 once_cell = "1.9.0"
 clap = { version = "3.0.0-rc.8", features = ["derive"] }
 console = "0.15.0"
-ordered-float = "2.8"
+ordered-float = { version = "2.8", features = ["serde"] }
 snailquote = "0.3"
 ptree = "0.4"
 target-lexicon = "0.12.2"
 petgraph = "0.6"
+mlua = { version = "0.7.3", features = ["lua54", "serialize", "send"] }
+serde = "1.0.136"
