--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "oktac"
-version = "0.1.1"
-authors = ["mikelma <mikelma7@gmail.com>"]
+about = "Okta programming language compiler"
+version = "0.2.0"
+authors = ["mikelma <mikelma@tutanota.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
